--- a/.github/workflows/code-style.yaml
+++ b/.github/workflows/code-style.yaml
@@ -6,6 +6,7 @@ on:
 env:
   PYTHON_VERSION: "3.9"
   BLACK_VERSION: "23.7.0"
+  ISORT_VERSION: "5.12.0"
 
 
 jobs:
@@ -23,3 +24,19 @@ jobs:
 
       - name: Run Black
         run: black . --check
+
+  isort-imports:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{env.PYTHON_VERSION}}
+
+      - name: Install iSort
+        run: pip install isort
+
+      - name: Run iSort
+        run: |
+          isort . --check-only
